@@ -100,8 +100,14 @@ else {
   foreach($personIDs as $personID) {
     if($personID != $_SESSION[$guid]["gibbonPersonID"]) { setNotification($connection2, $guid, $personID, $message, "Help Desk", "/index.php?q=/modules/Help Desk/issues_discussView.php&issueID=" . $issueID); } 
   }
+
+  $array = array("issueDiscussID"=>$issueDiscussID);
+
+  if($isTech) {
+    $array['technicianID']=getTechnicianID($connection2, $_SESSION[$guid]["gibbonPersonID"]);
+  }
   
-	setLog($connection2, $_SESSION[$guid]["gibbonSchoolYearID"], $gibbonModuleID, $_SESSION[$guid]["gibbonPersonID"], "Discussion Posted", array("issueDiscussID"=>$issueDiscussID));
+	setLog($connection2, $_SESSION[$guid]["gibbonSchoolYearID"], $gibbonModuleID, $_SESSION[$guid]["gibbonPersonID"], "Discussion Posted", $array);
 
   
   //Success 2 aka Posted
